k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flurly
  labels:
    app: flurly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flurly
  template:
    metadata:
      labels:
        app: flurly
    spec:
      containers:
      - name: flurly

        # change the container image to run, when pulling from another registry
        image: florinzz/flurly:latest
        #image: localhost:5000/flurly:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 2
          periodSeconds: 1
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 2
          periodSeconds: 1
