k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flurly
spec:
  selector:
    app: flurly
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
