k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flurly
spec:
  rules:
    - host: flurly.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flurly
                port:
                  number: 3000
